[package]
name = "typeid"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["no-std", "no-std::no-alloc"]
description = "Const TypeId and non-'static TypeId"
documentation = "https://docs.rs/typeid"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/typeid"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
